# WeShare

./: pyproject.toml  test_bubble.py  test_bubble_headless.py  test_db.py  test_db_send.py  test_http.py  test_login.py
app/config/: database.py
app/connection/: client.py  server.py
app/discovery/: discovery.py
app/ui/: main.py
app/ui/components/: avatar.py  chat_bubble.py  chat_tile.py  colors.py
app/ui/pages/: chat_page.py  login_page.py  profile_page.py
